Fixid nav and pic

--- a/test.html
+++ b/test.html
@@ -296,8 +296,8 @@ li a:hover {
       <div class="navigation">
         <ul>
           <li><a class="active" href="#home">Home</a></li>
-          <li><a href="/development">Development</a></li>
-          <li><a href="/photography">Photography</a></li>
+          <li><a href="https://github.com/FloxiGH">Development</a></li>
+          <li><a href="https://www.instagram.com/floxiig/?hl=de">Photography</a></li>
         </ul>
       </div>
       <div class="whatwedo">
