--- a/kontent-default.html
+++ b/kontent-default.html
@@ -76,7 +76,7 @@ li a:hover {
   font-family: Impact, fantasy;
   color: #55A08B;
   text-decoration: underline;
-  max-width: 250px;
+  max-width: 400px;
   align-self: center;
   align-content: center;
   justify-self: center;
@@ -161,6 +161,7 @@ li a:hover {
   color: white;
   padding-top: 3%;
   padding-bottom: 10%;
+  padding-right: 5%;
 
 }
 .python {
@@ -168,16 +169,19 @@ li a:hover {
   color: white;
   padding-top: 3%;
   padding-bottom: 10%;
+  padding-left: 5%;
 }
 .webbild {
   grid-area: webbild;
   color: white;
   padding-bottom: 10%;
+  padding-right: 5%;
 }
 .web {
   grid-area: web;
   color: white;
   padding-bottom: 10%;
+  padding-left: 5%;
 }
 .learnmore {
   grid-area: learnmore;
