--- a/kontent-default.html
+++ b/kontent-default.html
@@ -275,13 +275,13 @@ li a:hover {
   <body>
     <div class="container">
       <div class="anfbild">
-        <img src="Websitehead.png" alt="Head Bild" style="width:100%;">
+        <img src="images/Websitehead.png" alt="Head Bild" style="width:100%;">
       </div>
       <div class="texl">
         <p>Mein Name ist Leonardo Benini und ich wurde am 21.4.2003 in Boston, USA geboren. Ich habe dort bis zu meinem dritten Lebensjahr gelebt und bin dann nach München gezogen. Dort habe ich dann den Kindergarten, die Grundschule und die ersten zwei Jahre des Gymnasiums besucht. </p>
       </div>
       <div class="face">
-        <img src="Potrait.jpg" alt="Gesicht" style="width:100%; border-radius: 50%;">
+        <img src="images/Potrait.jpg" alt="Gesicht" style="width:100%; border-radius: 50%;">
       </div>
       <div class="texl2">
         <p>In der siebten Klasse bin ich mit meiner Familie nach London gezogen und habe dort drei Jahre gelebt. Seit diesem Schuljahr bin ich wieder in München und ich fühle mich sehr wohl in meiner alten Heimat. Aktuell besuche ich die 10. Klasse im Gymnasium Ottobrunn. In meiner Freizeit gehe ich drei Mal die Woche zum Leichtathletik Training, spiele Cello und löse gern Rubik’s Cube Würfel.</p>
